📒 Add Hello, World!

--- a/index.html
+++ b/index.html
@@ -17,5 +17,15 @@
         programming guides, career, and life in tech.
       </p>
     </header>
+    <main>
+      <h2>Blog</h2>
+      <ul>
+        <li>
+          <a href="blog/1-hello-world.html"
+            >Hello, World! I Started My Blog In Plain HTML</a
+          >
+        </li>
+      </ul>
+    </main>
   </body>
 </html>
